# command-coach

./: Makefile  README.md  pyproject.toml
src/coach/: __main__.py  bus.py  plugin.py
src/command_coach/: adapter.py  bus.py  command.py  error.py  plugin.py  plugin_included.py  query.py
tests/: async_test_bus.py  run_test_command.py  run_test_query.py  test_bus.py
