[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "commandcoach"
version = "1.3.0"
description = "Command Coach is a Command Bus and more"
readme = "README.md"
authors = [{ name = "Tomasz Szpak", email = "tomasz@szpak.dev" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["command", "bus", "command bus"]
dependencies = []
requires-python = ">=3.10"

[project.optional-dependencies]
dev = []

[project.urls]
Homepage = "https://github.com/szpak-dev/command-coach"

[project.scripts]
realpython = "command_coach.__main__:main"
