[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "commandcoach"
version = "1.5.0"
description = "Command Coach is an async Command Bus with plugins"
readme = "README.md"
authors = [{ name = "Tomasz Szpak", email = "tomasz@szpak.dev" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["command", "bus", "async command bus"]
dependencies = []
requires-python = ">=3.10"

[project.optional-dependencies]
dev = []

[project.urls]
Homepage = "https://github.com/szpak-dev/command-coach"
